2008-06-08  Chong Yidong  <cyd@stupidchicken.com>

	* Makefile.in: Compile menu.c.

	* lisp.h: Declare syms_of_menu.

	* emacs.c (main): Call syms_of_menu.

	* keyboard.h: Relocate platform-independent menu definitions from
	xmenu.c.

	* menu.c: New file.  Relocate platform-independent menu
	definitions from xmenu.c.  Suggested by Adrian Robert.

	* xmenu.c: Remove platform-independent menu definitions.
	(menu_items menu_items_inuse, menu_items_allocated)
	(menu_items_used, menu_items_n_panes)
	(menu_items_submenu_depth): Move to keyboard.h.
	(init_menu_items, finish_menu_items, unuse_menu_items)
	(discard_menu_items, restore_menu_items, save_menu_items)
	(grow_menu_items, push_submenu_start, push_submenu_end)
	(push_left_right_boundary, push_menu_pane, push_menu_item)
	(keymap_panes, single_keymap_panes, single_menu_item)
	(list_of_panes, list_of_items, find_and_call_menu_selection)
	(xmalloc_widget_value, free_menubar_widget_value_tree)
	(parse_single_submenu, digest_single_submenu)
	(update_submenu_strings): Move to menu.c.

2008-06-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dispnew.c (Flast_nonminibuf_frame): Handle the NULL case.

2008-06-06  Miles Bader  <miles@gnu.org>

	* xdisp.c (x_produce_glyphs): Calculate tab width based on current
	face, not frame default.

2008-06-05  Martin Rudalics  <rudalics@gmx.at>

	* window.c (pop_up_windows, pop_up_frames)
	(display_buffer_reuse_frames, Vpop_up_frame_function)
	(Vdisplay_buffer_function, Veven_window_heights)
	(Vspecial_display_buffer_names, Vspecial_display_regexps)
	(Vspecial_display_function, Vsame_window_buffer_names)
	(Vsame_window_regexps, split_height_threshold)
	(Vsplit_window_preferred_function): Move those vars to window.el.
	(display_buffer_1, Fspecial_display_p, Fsame_window_p)
	(Fdisplay_buffer): Move those functions to window.el.
	(syms_of_window): Remove corresponding declarations.
	(display_buffer): New function.
	(temp_output_buffer_show, Fother_window_for_scrolling): Use it.