@@ -1,3 +1,9 @@
+2008-06-08  Andreas Schwab  <schwab@suse.de>
+
+	* Makefile.in (obj): Always add menu.o
+	* emacs.c (main): Always call syms_of_menu.
+	* keyboard.h: Remove extra #ifdef HAVE_X_WINDOW.
+
 2008-06-08  Chong Yidong  <cyd@stupidchicken.com>
 
 	* Makefile.in: Compile menu.c.
